addresing spacing issues in smaller screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@
           p {
             font-size: 2vmin;
             text-align: left;
+            margin-bottom: 25px;
           }
           .col-sm-4{
             width : 1000%;
@@ -99,6 +100,7 @@
           p {
             font-size: 2vmin;
             text-align: left;
+            margin-bottom: 25px;
           }       
           .col-sm-4{
             width : 100%;
